[project]
name = "aoc-2015"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.8.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B006", "E501"]

[tool.pytest.ini_options]
testpaths = ["test"]
addopts = "-ra"
