[project]
name = "aoc-2015"
version = "0.1.0"
description = "Advent of Code 2015"
readme = "README.md"
authors = [
    { name = "Eduardo Ellery", email = "eduellery@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ruff>=0.8.3",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = ["B006", "E501"]

[tool.uv.workspace]
members = ["test"]

[project.scripts]
aoc-2015 = "aoc_2015:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
