[project]
name = "aoc-2015"
version = "0.1.0"
description = "Advent of Code 2015"
readme = "README.md"
authors = [
    { name = "Eduardo Ellery", email = "eduellery@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "mypy>=1.14.1",
    "ruff>=0.9.0",
]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
ignore = [
    # Line too long
    "E501",
]

[tool.mypy]
show_column_numbers = true
import_untyped = false

[tool.uv.workspace]
members = ["test"]

[project.scripts]
aoc-2015 = "aoc_2015:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
