[metadata]
name = aoc2015
description = Advent of Code 2015
author = Eduardo Ellery
license = MIT
license_file = LICENSE
platforms = linux
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: PyPy :: 3.7
    Programming Language :: PyPy :: 3.8
    Programming Language :: PyPy :: 3.9
    Programming Language :: PyPy :: 3.10

[options]
packages = aoc
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
aoc = py.typed

[flake8]
max-line-length = 160