[project]
name = "test"
version = "0.1.0"
description = "Tests for Advent of Code 2015"
requires-python = ">=3.13"
dependencies = [
    "aoc-2015",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.uv.sources]
aoc-2015 = { workspace = true }

[tool.pytest.ini_options]
addopts = "-ra --cov=../src --cov-config=.coveragerc --cov-report=term-missing"